# typesugar

./: .gitignore  .npmrc  .pep-gate  .prettierignore  .prettierrc  .vercelignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  PHILOSOPHY.md  README.md  REBRAND.md  ROADMAP.md  TODO.md  build-final.txt  contracts-test-output.txt  debug-output.txt  eslint.config.mjs  full-test-output.txt  install-output.txt  module-evaluation-log.md  package.json  playground-review-log.md  pnpm-lock.yaml  pnpm-workspace.yaml  restore-cursor-history.sh  rust-toolchain.toml  test-final.txt  test-output-final.txt  test-scanner.cjs  transformer-test-output.txt  tsconfig.json  tsup.config.ts  typesugar.manifest.json  vercel.json  vitest.config.ts  vitest.workspace.ts  z3-test-output.txt
.changeset/: config.json  initial-rc-release.md  pep-034-language-service-parity.md  pep-047-remove-preprocessor.md  pep-048-keep-conditions.md  pep-049-wave-4-test-debt.md  pep-052-wave-2-syntax-labels.md  pep-052-wave-3-do-notation-scope.md  pep-052-wave-4-demagicking.md  pep-052-wave-5-show-tagging.md  pep-052-wave-6-marker-fallback.md  pep-052-wave-7-intrinsics-from-source.md  pep-052-wave-8-jsdoc-dispatcher-unification.md  pep-053-wave-1-remove-explicit-specialize.md  pep-053-wave-2-source-extraction.md  pep-053-wave-3-pipeline-unification.md  pep-053-waves-4-5-delete-builtins.md  pep-054-diagnostic-suppression-rename.md  pep-058-wave-1-engines-provenance.md  pep-058-wave-10-noninteractive.md  pep-058-wave-2-onboarding-fixes.md  pep-058-wave-4-error-catalog.md  pep-058-wave-6-consumer-ai.md  pre.json  (+1 more)
(+669 files in other folders)
